nav alignment fix

--- a/src/templates/page.module.css
+++ b/src/templates/page.module.css
@@ -28,6 +28,7 @@
   padding: 10px;
   padding-left: 30px !important;
   align-self: flex-start;
+  /* font-size: 18px; */
 }
 
 .contain {
@@ -44,7 +45,7 @@
   font-size: 60px;
   margin-bottom: 0;
   margin-right: 10vw;
-  color: #efefef;
+  color: #636363;
   font-family: "Courier New", Courier, monospace;
 }
 
